--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-font: #0A0406;
+  --color-fontLight: #FFFFFF;
   --color-background: #FFF4FB;
   --color-backgroundSecondary: #FFC6F3;
   --color-backgroundBlue: #3977E9;
